# Secondlive_class

./: .env  pyproject.toml
secondlive_class/: main.py  setting.py
